# opengatellm-rs

./: .env.test  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  compose.test.yml  config.test.yml
.github/workflows/: ci.yml
examples/: chat_completion.rs  chat_streaming.rs  embeddings.rs  monitoring.rs  rag.rs  rerank.rs
spec/: openapi-0.4.5.json
src/: chat.rs  chunks.rs  client.rs  collections.rs  common.rs  documents.rs  embeddings.rs  error.rs  lib.rs  me.rs  models.rs  monitoring.rs  rerank.rs  search.rs  stream.rs
tests/: integration_chat.rs  integration_chat_stream.rs  integration_embeddings.rs  integration_models.rs  integration_tier1.rs  serde_chat.rs  serde_embeddings.rs  serde_me.rs  serde_models.rs  serde_monitoring.rs  serde_rag.rs  serde_rerank.rs  stream_sse.rs  wire_me.rs  wire_rag.rs
