[package]
name = "opengatellm"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Client Rust pour OpenGateLLM, l'API gateway open-source pour LLM self-hosted (DINUM / Etalab)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Adelagric/opengatellm-rs"
documentation = "https://docs.rs/opengatellm"
keywords = ["llm", "ai", "openai", "client", "opengatellm"]
categories = ["api-bindings", "asynchronous"]
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
thiserror = "2"
eventsource-stream = "0.2"
bytes = "1"
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
wiremock = "0.6"
dotenvy = "0.15"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "warn"
unimplemented = "deny"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
